[package]
name = "imgui-inspect-demo"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#skulpin = { version = "0.11.1", default-features = false, features = ["skia_complete", "skulpin_winit", "winit-24"] }
#skulpin-plugin-imgui = "0.7"

rafx = { version = "0.0.6", features = ["rafx-vulkan", "framework"] }

log = "0.4"
env_logger = "0.6"

imgui = "0.7"
imgui-winit-support = { version = "0.7", default-features = false, features = ["winit-23"] }

imgui-inspect = { path = "../imgui-inspect" }
imgui-inspect-derive = { path = "../imgui-inspect-derive" }

winit = "0.24"
